Added .env to backend.